# CandyAlgoAdjointDiff

./: CMakeLists.txt  LICENSE  README.md  driver.cpp  ideas.cpp
examples/: black.cpp
include/Cady/: AADFunctionGenerator.h  Cady.h  CodeGen.h  CodeWriter.h  CpuTimer.h  Frontend.h  ImpliedMatrixFunction.h  Instruction.h  ProgramCode.h  SourceCodeManager.h  SymbolicMatrix.h  Transform.h
include/Cady/Templates/: CallOption.h  KOCallOption.h
test/: expr.cpp
vs/SweeterThanCady/: CMakeLists.txt
vs/SweeterThanCady/SweeterThanCady/: CMakeLists.txt  SweeterThanCady.cpp  SweeterThanCady.h
vsproj/Cady/: Cady.sln
vsproj/Cady/Cady/: Cady.cpp  Cady.vcxproj  Cady.vcxproj.filters
